# pymsteams

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST  Pipfile  README.md  dev-requirements.txt  pymsteams.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.circleci/: circle_ciconfig.md  config.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  python-package.yml
pymsteams/: __init__.py  abc.py  adaptive_cards.py  adaptivecard.py  base.py  errors.py  exceptions.py  legacy_cards.py  ui.py  utils.py  webhook.py
pymsteams/legacy/: cardsection.py  connectorcard.py  potentialaction.py
pymsteams/templating/: adaptive_card_base.py  body_elements.py  constants.py  simple_card.py
src/pymsteams/: __init__.py
test/: old_webhook.py  test_legacy.py  test_legacy_async.py  test_simple_card.py  test_webhook.py
tests/: test_webhook.py
